# Reservation_manager

./: .env  .gitignore  Cargo.toml  README.md  data.json  index.html  plan.md
migrations/2024-04-20-162928_resv/: down.sql  up.sql
migrations/2024-05-14-041048_create_resv/: up.sql
migrations/2024-05-22-032358_create_role/: down.sql  up.sql
migrations/2024-06-04-094223_create_property/: up.sql
migrations/2024-06-04-094655_create_resv/: down.sql  up.sql
migrations/2024-06-04-094810_create_role/: up.sql
migrations/2024-06-04-094931_create_users_property/: down.sql  up.sql
migrations_backup/: schema.txt
migrations_backup/2024-05-14-041048_create_resv/: down.sql
src/: crud.rs  crud_auth.rs  crud_roles.rs  helpers.rs  lib.rs  models.rs  schema.rs
