[package]
name = "diesel_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
time = { version = "0.3.36", features = ["serde"]} 
diesel = { version = "2.1.5", features = ["postgres", "time"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.4", features = ["json"] }

serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.116"
tokio = { version = "=1.35.1", features = ["full"] }
axum-macros = "0.4.1"
http-body = "1.0.0"
bytes = "1.6.0"
http = "1.1.0"
