[package]
name = "diesel_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
time = { version = "0.3.36", features = ["serde", "macros"]} 
diesel = { version = "2.1.5", features = ["postgres", "time", "chrono", "r2d2", "serde_json", "uuid"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.4", features = ["json"] }
uuid = {version = "1.8.0", features = ["v4", "fast-rng","macro-diagnostics", "serde"]}

serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.116"
tokio = { version = "=1.35.1", features = ["full"] }
axum-macros = "0.4.1"
chrono = { version = "0.4.38", features = ["serde"]} 
r2d2 = "0.8.10"
